--- a/tabel.html
+++ b/tabel.html
@@ -101,7 +101,7 @@
         <div class="row mt-4">
             <div class="col-md-12 footer" id="site-footer">
                 <footer class="copyright text-center">
-                    <p>&copy; 2025 Belajar Bootstrap. All Rights Reserved.</p>
+                    <p>&copy; 2025 Belajar Bootstrap. Mukhamad Sofyan - 135.</p>
                 </footer>
             </div>
         </div>
