--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     <div class="row mt-4">
       <div class="col-md-12 footer" id="site-footer">
         <footer class="copyright text-center">
-          <p>&copy; 2025 Belajar Bootstrap. All Rights Reserved.</p>
-        </footer>
+                    <p>&copy; 2025 Belajar Bootstrap. Mukhamad Sofyan - 135.</p>
+                </footer>
       </div>
     </div>
   </div>
