--- a/portofolio.html
+++ b/portofolio.html
@@ -25,8 +25,8 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="form.html">Form Contoh</a></li>
                         <li><a href="tabel.html">Table Contoh</a></li>
-                        <li><a href="aboutus.html">About Us</a></li>
-                        <li><a href="portofolio.html">Portfolio</a></li>
+                        <!-- <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="portofolio.html">Portfolio</a></li> -->
                     </ul>
                 </nav>
             </div>
@@ -101,6 +101,6 @@
     </div>
 
     <script src="vendor/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
+</body> 
 
 </html>
