--- a/aboutus.html
+++ b/aboutus.html
@@ -25,8 +25,9 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="form.html">Form Contoh</a></li>
                         <li><a href="tabel.html">Table Contoh</a></li>
-                        <!-- <li><a href="aboutus.html">About Us</a></li>
-                        <li><a href="portofolio.html">Portfolio</a></li> -->
+                        <li><a href="kalkulator.html">Portfolio</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="portofolio.html">Portfolio</a></li>
                     </ul>
                 </nav>
             </div>
