--- a/kalkulator.html
+++ b/kalkulator.html
@@ -42,7 +42,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="form.html">Form Contoh</a></li>
                         <li><a href="tabel.html">Table Contoh</a></li>
-                        <li><a href="kalkulator.html">Portfolio</a></li>
+                        <li><a href="kalkulator.html">Kalkulator</a></li>
                         <li><a href="aboutus.html">About Us</a></li>
                         <li><a href="portofolio.html">Portfolio</a></li>
                     </ul>
